--- a/index.html
+++ b/index.html
@@ -1220,4 +1220,18 @@
         document.addEventListener('DOMContentLoaded', init);
     </script>
 </body>
+
 </html>
+<a href="https://wa.me/916230823107?text=Hello%20Pizza%204%20Me%2C%20I%20want%20to%20order%20pizza"
+   style="
+   display:inline-block;
+   padding:15px 25px;
+   background:#25D366;
+   color:white;
+   font-size:18px;
+   text-decoration:none;
+   border-radius:8px;
+   font-weight:bold;
+   ">
+📲 Order on WhatsApp
+</a>
