--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Pizza 4 Me - Fresh & Delicious Pizzas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <style> <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <style> 
 
         * {
             margin: 0;
@@ -1236,4 +1237,5 @@
    ">
 📲 Order on WhatsApp
 </a>
+
 
